--- a/.env.tmpl
+++ b/.env.tmpl
@@ -1,5 +1,5 @@
 # roundcube release version to use
-RELEASE='1.3.1'
+RELEASE='1.3.6'
 # base docker image that contains sqlite3 for database initialization
 BASE='baseimage'
 # volume name, needs to match docker-compose naming conventions: <cluster>_<volumename>
@@ -8,6 +8,7 @@ DATA_VOL='emailstack_webmaildata'
 KEY_IN='RANDOM_STR'
 # hostname for certificate and services
 DOMAIN=yourdomain.com
+DOMAIN2=anotherdomain.com
 SERVERNAME=mail
 # time zone for the webmail client
 TIMEZONE='America/Los_Angeles'
